--- a/ShareTrader/Views/Shared/_Layout.cshtml
+++ b/ShareTrader/Views/Shared/_Layout.cshtml
@@ -16,11 +16,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Share Trader Helper", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
+                    <li><a href="~/Info/Shares">Shares</a></li>
+                    <li><a href="~/Info/Brokers">Brokers</a></li>
+                    <li><a href="~/Info/Trades">Trades</a></li>
+                    <li><a href="~/Info/Announcements">Announcements</a></li>
+                    <li><a href="~/Info/InterestedShares">Interested-Shares</a></li>
+                    <li><a href="~/Acc/complete">Register&Login</a></li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
                 </ul>
             </div>
