redirect to login page in case the user is not loggedin

--- a/ShareTrader/Views/Info/Announcements.cshtml
+++ b/ShareTrader/Views/Info/Announcements.cshtml
@@ -4,6 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Announcements</title>
+    <script src="~/Scripts/helpersApp.js"></script>
+    <script language="javascript">isLoggedIn()</script>
 </head>
 <body>
     <h1>The complete list of the available announcements</h1>
