--- a/ShareTrader/Views/Info/Brokers.cshtml
+++ b/ShareTrader/Views/Info/Brokers.cshtml
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Complete brokers view</title>
+    <script src="~/Scripts/helpersApp.js"></script>
+    <script language="javascript">isLoggedIn()</script>
 </head>
 <body>
     <h2>Get broker recommendation based on your chosen shares types!</h2>
