--- a/ShareTrader/Views/Acc/Login.cshtml
+++ b/ShareTrader/Views/Acc/Login.cshtml
@@ -8,7 +8,7 @@
     <title>ASP.NET SignalR Stock Ticker</title>
 </head>
 <body>
-    <div class="row">
+    <div class="row init">
         <div class="col-md-4">
             <section>
                 <form id="account" method="post">
