--- a/ShareTrader/Views/Info/InterestedShares.cshtml
+++ b/ShareTrader/Views/Info/InterestedShares.cshtml
@@ -4,6 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>AddShares</title>
+    <script src="~/Scripts/helpersApp.js"></script>
+    <script language="javascript">isLoggedIn()</script>
 </head>
 <body>
     <h1>The complete list of your interested shares</h1>
