--- a/ShareTrader/Views/Info/Shares.cshtml
+++ b/ShareTrader/Views/Info/Shares.cshtml
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Complete shares view</title>
+    <script src="~/Scripts/helpersApp.js"></script>
+    <script language="javascript">isLoggedIn()</script>
 </head>
 <body>
     <div>
