--- a/ShareTrader/Views/Info/Trades.cshtml
+++ b/ShareTrader/Views/Info/Trades.cshtml
@@ -4,7 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     @Styles.Render("~/Content/daterangepicker.css")
-
+    <script src="~/Scripts/helpersApp.js"></script>
+    <script language="javascript">isLoggedIn()</script>
 
     <title>Trades</title>
 </head>
